--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<header>
+		<h1 class="ahmad">AHMADBOY CORPORATION</h1>
 		<a class="logo" href="#"><img src="images/logo_03.jpg"></a>
 
 		<div class="menu">
@@ -34,7 +35,7 @@
 	</header>
 
 <content>
-	<img class="banner" src="images/gold_03.jpg">
+	<img class="banner" src="images/ash.jpg">
 
 	<div class="login">
 
