FILES ARE CHANGED

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<header>
-		<h1 class="ahmad">AHMADBOY CORPORATION</h1>
 		<a class="logo" href="#"><img src="images/logo_03.jpg"></a>
 
 		<div class="menu">
@@ -35,7 +34,7 @@
 	</header>
 
 <content>
-	<img class="banner" src="images/ash.jpg">
+	<img class="banner" src="images/gold_03.jpg">
 
 	<div class="login">
 
