FILES ARE CHANGED

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</header>
 
 <content>
-	<img class="banner" src="images/gold_03.jpg">
+	<img class="banner" src="images/ash.jpg">
 
 	<div class="login">
 
@@ -77,6 +77,8 @@
 		<h3>How it <span>works</span></h3>
 		<img src="images/howitworks_13.jpg" alt="">
 	</div>
+
+	<h2 class="sec">100% SECURE</h2>
 
 </footer>
 
