FILES ARE CHANGED

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</header>
 
 <content>
-	<img class="banner" src="images/ash.jpg">
+	<img class="banner" src="images/gold_03.jpg">
 
 	<div class="login">
 
@@ -78,7 +78,6 @@
 		<img src="images/howitworks_13.jpg" alt="">
 	</div>
 
-	<h2 class="sec">100% SECURE</h2>
 
 </footer>
 
